# track-pypi-dependency-version

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
track_pypi_dependency_version/: __init__.py
